--- a/Employment-guide/index.html
+++ b/Employment-guide/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/Braindesign/index.jsx"></script>
+    <!-- "/src/Braindesign/index.jsx" -->
+    <script type="module" src="/src/Braindesign/Quiz-app/main.jsx"></script>
   </body>
 </html>
