--- a/Employment-guide/index.html
+++ b/Employment-guide/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>FBN-prep ||</title>
 
     <link
       rel="stylesheet"
@@ -19,6 +19,7 @@
   <body>
     <div id="root"></div>
     <!-- "/src/Braindesign/index.jsx" -->
-    <script type="module" src="/src/Braindesign/Quiz-app/main.jsx"></script>
+    <!-- "/src/Braindesign/Quiz-app/main.jsx" -->
+    <script type="module" src="/src/Braindesign/index.jsx"></script>
   </body>
 </html>
